# Marvex

./: .gitignore  PROJECT_STATUS.md  README.md  VAXIL_REFERENCE.md  VERSION_MANAGEMENT.md  build-installer.bat  build-installer.ps1  package-lock.json  package.json  pyproject.toml  version.toml  voice_models.manifest.json
TODO/: 01-conversational-memory-and-reference-resolution.md  02-agentic-tool-calling-loop.md  03-llm-intent-and-slot-extraction.md  04-end-to-end-voice-turn-loop.md  05-grounded-answer-web-search-wiring.md  07-tool-registry-per-file-refactor.md  08-live-browser-and-computer-use.md  README.md
apps/cli/: README.md  main.py
apps/control_plane_web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/future_qt_shell/: README.md
apps/shell/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
apps/shell/src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.bundle.conf.json  tauri.conf.json
apps/shell/src-tauri/capabilities/: default.json
apps/shell/src-tauri/src/: http.rs  lib.rs  main.rs  overlay_geometry.rs  service.rs  service_token.rs  state_stream.rs  supervisor.rs  token.rs  token_handoff.rs
docker/searxng/: settings.yml
docs/: ACCEPTANCE_CRITERIA.md  ADAPTIVE_CONTEXT_EVIDENCE_GOVERNANCE.md  AGENT_CONTEXT_RULES.md  AGENT_EXECUTION_LOOP_FOUNDATION.md  AI_AGENT_RULES.md  ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  ASSISTANT_STAGE_LIFECYCLE_FOUNDATION.md  ASSISTANT_TURN_CONTRACTS.md  ASSISTANT_TURN_CONTRACT_MAP.md  ASSISTANT_TURN_ENVELOPE.md  ASSISTANT_TURN_SPINE.md  BUILD_GUIDE.md  CAPABILITY_PLATFORM_FOUNDATION.md  CONTRACTS.md  CONTRACT_APPROVALS.md  CONTROL_PLANE_FOUNDATION.md  CORE_RULES.md  END_TO_END_ASSISTANT_TURN_INTEGRATION_FOUNDATION.md  FRONTEND_BOUNDARY.md  FULL_TOOLING_COMPUTER_USE_FOUNDATION.md  FUTURE_SERVICE_MAP.md  GIT_RULES.md  GOVERNANCE_CLASSIFICATION.md  GPT-5.5_prompting_guide.md  GROUNDED_ANSWER_EVIDENCE.md  HYBRID_INTENT_RUNTIME.md  INTENT_CONTEXT_PROMPT_HARNESS_FOUNDATION.md  IPC_API.md  LEARNING_RUNTIME.md  LIBRARY_POLICY.md  LIBRARY_RESEARCH_MATRIX.md  MARKETPLACE_MEMORY_CONTROL_PLANE_EXPANSION.md  MARVEX_INSTALLER_PACKAGING.md  MCP_ADAPTER_FOUNDATION.md  MEMORY_FOUNDATION.md  MEMORY_TREE_CONNECTOR_FOUNDATION.md  MODULE_INDEX.md  NATIVE_ASGI_MIGRATION_PLAN.md  PROCESS_MODEL.md  (+28 more)
docs/TODO/: 01-conversational-memory-and-reference-resolution.md  02-agentic-tool-calling-loop.md  03-llm-intent-and-slot-extraction.md  05-grounded-answer-web-search-wiring.md  06-streaming-responses.md  07-tool-registry-per-file-refactor.md  08-live-browser-and-computer-use.md  08-voice-barge-in.md  09-voice-addressing-detection.md  BATCH_PLAN.md  README.md
docs/diagrams/: future-process-map.md  module-boundaries.md  system-overview.md  trace-lifecycle.md  v1-process-map.md
docs/library-decisions/: assistant_intelligence_tool_runtime.md  browser_use.md  capability_platform_adapters.md  control_plane_web_stack.md  ddgs_web_search.md  dependency_resolution_uv.md  fastembed_intent_encoder.md  intent_context_prompt_harness.md  litellm.md  llama_index_core_selector.md  lmstudio_responses.md  local_api_asgi_host.md  marketplace_memory_control_plane_expansion.md  mcp_sdk.md  memory_tree_connectors.md  openai_agents_sdk.md  openai_computer_use.md  openai_sdk.md  playwright.md  policy_engine.md  prompt_harness_context_matrix.md  provider_structured_output_spike.md  pydantic.md  pywinauto.md  rust_runtime_adapters.md  searxng_web_search.md  semantic_router.md  skills_runtime.md  tiny_intent_validator.md  uiautomation.md  voice_runtime_backends.md  web_use.md
scripts/: README.md  check_adaptive_context_learning_governance.py  check_agent_context_budget.py  check_agent_execution_loop_boundaries.py  check_agentmemory_backend_boundaries.py  check_assistant_intelligence_tool_runtime_boundaries.py  check_assistant_runtime_boundaries.py  check_assistant_turn_contract_drafts.py  check_assistant_turn_contract_map.py  check_assistant_turn_envelope.py  check_assistant_turn_spine.py  check_autonomy_policy_boundaries.py  check_capability_runtime_boundaries.py  check_cognition_runtime_boundaries.py  check_connector_autofetch_boundaries.py  check_control_plane_boundaries.py  check_core_agentic_turn_loop_boundaries.py  check_core_service_boundaries.py  check_decision_runtime_boundaries.py  check_docs_accepted.py  check_end_to_end_turn_boundaries.py  check_file_size_policy.py  check_forbidden_modules.py  check_full_tooling_boundaries.py  check_governance_classification.py  check_hybrid_intent_web_search_governance.py  check_intent_context_prompt_boundaries.py  check_intent_worker_boundaries.py  check_library_decisions.py  check_library_research_matrix.py  check_local_api_boundaries.py  check_local_api_client_boundaries.py  check_local_service_startup_boundaries.py  check_marketplace_memory_control_plane_boundaries.py  check_mcp_adapter_boundaries.py  check_memory_extraction_boundaries.py  check_memory_runtime_boundaries.py  check_memory_tree_connector_boundaries.py  check_port_boundaries.py  check_process_runtime_boundaries.py  (+31 more)
services/core/: README.md  __init__.py  main.py  safe_state.py
services/desktop_agent/: README.md  __init__.py  controller.py  main.py  models.py
services/intent_worker/: README.md  __init__.py  controller.py  main.py  models.py
services/provider_worker/: README.md  __init__.py  controller.py  main.py  models.py
services/shell/: README.md
services/tool_worker/: README.md  __init__.py  controller.py  main.py  models.py
services/voice_worker/: README.md  __init__.py  controller.py  main.py  models.py
templates/: AGENT_FINAL_REPORT.md  CONTRACT_CHANGE.md  ERROR_ENVELOPE.md  LIBRARY_DECISION.md  RFC.md  SERVICE_README.md  TASK_SPEC.md  TRACE_EVENT.md  VALIDATION_REPORT.md
tests/: README.md  test_python_runtime_version.py
tests/adapters/: README.md  test_fake_provider.py  test_litellm_conversation_store.py  test_litellm_provider.py  test_litellm_streaming.py  test_litellm_structured_output.py  (+7 more)
tests/api/: README.md  (+4 more)
(+457 files in other folders)
