[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "marvex"
version = "0.1.0"
description = "Marvex v1 contract package"
requires-python = ">=3.11"
dependencies = [
  "litellm==1.85.0",
  "mcp==1.27.1",
  "openai==2.37.0",
  "openai-agents==0.17.2",
  "playwright==1.60.0",
  "pydantic>=2,<3",
  "semantic-router[hybrid]==0.1.14",
  "Authlib==1.7.2",
  "browser-use==0.11.13",
  "llama-index-core>=0.14.22",
  "ddgs>=9.14.4",
  "moonshine-voice==0.0.59",
  "funasr==1.3.1",
  "sherpa-onnx==1.13.2",
  "kokoro-onnx==0.5.0",
  "piper-tts==1.4.2",
  "stream2sentence==0.3.2",
  "silero-vad==6.2.1",
  "webrtcvad-wheels==2.0.14",
  "sherpa-onnx-core==1.13.2",
  "sounddevice==0.5.5",
  "pywinauto>=0.6; sys_platform == \"win32\"",
  "uiautomation>=2.0; sys_platform == \"win32\"",
]

[project.scripts]
marvex-core = "services.core.main:main"
marvex-provider-worker = "services.provider_worker.main:main"
marvex-intent-worker = "services.intent_worker.main:main"
marvex-tool-worker = "services.tool_worker.main:main"
marvex-voice-worker = "services.voice_worker.main:main"

[project.optional-dependencies]
test = [
  "pytest>=9.0.3,<10",
]
embeddings = [
  "fastembed>=0.4.0,<1",
]

[tool.setuptools.packages.find]
include = ["packages*", "services*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pip>=26,<27",
    "pyinstaller==6.17.0",
    "pytest>=9.0.3,<10",
]
