[package]
name = "marvex-shell"
version = "0.1.0"
description = "Marvex Windows Shell"
authors = ["Marvex"]
edition = "2021"

[lib]
name = "marvex_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "marvex-shell"
path = "src/main.rs"

[[bin]]
name = "marvex-service"
path = "src/bin/marvex-service.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
getrandom = "0.2.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.10.3", features = ["tray-icon", "image-ico"] }
tauri-plugin-autostart = "2.5.0"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-positioner = "2.3.1"
tauri-plugin-single-instance = "2.3.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
