[package]
name = "marvex-shell"
version = "0.2.1"
description = "Marvex Windows Shell"
authors = ["Marvex"]
edition = "2021"
default-run = "marvex-shell"

[lib]
name = "marvex_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "marvex-shell"
path = "src/main.rs"

[[bin]]
name = "marvex-service"
path = "src/bin/marvex-service.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
getrandom = "0.2.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.10.3", features = ["tray-icon", "image-ico"] }
tauri-plugin-autostart = "2.5.0"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-positioner = "2.3.1"
tauri-plugin-single-instance = "2.3.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
process-wrap = { version = "9.1.0", features = ["std"] }
tokio = { version = "1", features = ["time", "sync", "macros"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Security", "Win32_Security_Authorization", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Pipes", "Win32_System_Threading"] }
windows-service = "0.7"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
